--- a/.env-example
+++ b/.env-example
@@ -7,3 +7,11 @@ JWT_SECRET=
 
 # global config
 NODE_ENV=
+BASE_URL=
+BASE_PORT=
+
+# mail config
+MAIL_SERVICE=
+MAIL_USER=
+MAIL_PASSWORD=
+MAIL_FROM=
